# savecodec

./: Cargo.toml  README.md  save.format  save.txt
benches/: cipher.rs
binformat/: Cargo.toml
binformat/src/: generate.rs  lib.rs  parse.rs
binformat/src/generation/: mod.rs  reads.rs  statements.rs  structs.rs  writes.rs
savecodec/: Cargo.toml
savecodec/src/: lib.rs
src/: lib.rs
