[package]
name = "savecodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
base64 = "0.13.1"
regex = "1.6.0"
lazy_static = "1.4.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cipher"
harness = false