[package]
name = "binformat"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = "1.0"
serde_yaml = "0.9"
byteorder = "1.4"
proc-macro-error = "1.0"
paste = "1.0"
itertools = "0.10"